--- a/iOS-MVVMC-Architecture/View/TableViewCell/TimeLineTweetCell.xib
+++ b/iOS-MVVMC-Architecture/View/TableViewCell/TimeLineTweetCell.xib
@@ -11,11 +11,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="90" id="rnz-l2-ymO" customClass="TimeLineTweetCell" customModule="iOS_MVVMC_Architecture" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TimeLineTweetCell" rowHeight="90" id="rnz-l2-ymO" customClass="TimeLineTweetCell" customModule="iOS_MVVMC_Architecture" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="90"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="rnz-l2-ymO" id="BeP-kv-42o">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="89.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="90"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c6X-oZ-e65">
@@ -64,6 +64,12 @@
                     <constraint firstItem="b1g-Th-wlG" firstAttribute="leading" secondItem="iOm-R0-Pw0" secondAttribute="trailing" constant="4" id="nRo-yO-w8o"/>
                 </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="bodyLabel" destination="b1g-Th-wlG" id="R6q-bW-nSv"/>
+                <outlet property="iconImageView" destination="iOm-R0-Pw0" id="XkZ-PJ-D6X"/>
+                <outlet property="screenNameLabel" destination="ae9-ze-QGT" id="d5E-uT-FHa"/>
+                <outlet property="userNameLabel" destination="c6X-oZ-e65" id="7K4-XU-WJo"/>
+            </connections>
             <point key="canvasLocation" x="-21.5" y="-5"/>
         </tableViewCell>
     </objects>
