--- a/iOS-MVVMC-Architecture/View/Storyboard/HomeTimeLineViewController.storyboard
+++ b/iOS-MVVMC-Architecture/View/Storyboard/HomeTimeLineViewController.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="GT7-cy-ASO">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="GT7-cy-ASO">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -28,19 +28,21 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="wzY-Dj-h3Z" firstAttribute="top" secondItem="o9I-FE-9T5" secondAttribute="top" id="12C-HQ-nWv"/>
                             <constraint firstItem="wzY-Dj-h3Z" firstAttribute="leading" secondItem="o9I-FE-9T5" secondAttribute="leading" id="OOn-5g-cz0"/>
-                            <constraint firstItem="plf-D7-Tgl" firstAttribute="top" secondItem="wzY-Dj-h3Z" secondAttribute="bottom" id="WbZ-0k-xb9"/>
-                            <constraint firstItem="wzY-Dj-h3Z" firstAttribute="top" secondItem="o9I-FE-9T5" secondAttribute="top" id="tRu-BN-4M9"/>
+                            <constraint firstAttribute="bottom" secondItem="wzY-Dj-h3Z" secondAttribute="bottom" id="ifH-Tq-QM4"/>
                             <constraint firstAttribute="trailing" secondItem="wzY-Dj-h3Z" secondAttribute="trailing" id="tnW-yc-knv"/>
                         </constraints>
                     </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="tableView" destination="wzY-Dj-h3Z" id="nH7-4i-sPh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2KW-35-lSf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="170" y="162"/>
+            <point key="canvasLocation" x="168.80000000000001" y="161.46926536731635"/>
         </scene>
     </scenes>
 </document>
