--- a/iOS-MVVMC-Architecture/View/Storyboard/HomeTimeLineViewController.storyboard
+++ b/iOS-MVVMC-Architecture/View/Storyboard/HomeTimeLineViewController.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="GT7-cy-ASO">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Yy5-a4-gCF">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,39 +10,20 @@
     </dependencies>
     <scenes>
         <!--Home Time Line View Controller-->
-        <scene sceneID="j5B-u9-Ahg">
+        <scene sceneID="mGH-0A-asQ">
             <objects>
-                <viewController id="GT7-cy-ASO" customClass="HomeTimeLineViewController" customModule="iOS_MVVMC_Architecture" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="KOC-yK-RyX"/>
-                        <viewControllerLayoutGuide type="bottom" id="plf-D7-Tgl"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="o9I-FE-9T5">
+                <tableViewController id="Yy5-a4-gCF" customClass="HomeTimeLineViewController" customModule="iOS_MVVMC_Architecture" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="lha-R8-bgS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="wzY-Dj-h3Z">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </tableView>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="wzY-Dj-h3Z" firstAttribute="top" secondItem="o9I-FE-9T5" secondAttribute="top" id="12C-HQ-nWv"/>
-                            <constraint firstItem="wzY-Dj-h3Z" firstAttribute="leading" secondItem="o9I-FE-9T5" secondAttribute="leading" id="OOn-5g-cz0"/>
-                            <constraint firstAttribute="bottom" secondItem="wzY-Dj-h3Z" secondAttribute="bottom" id="ifH-Tq-QM4"/>
-                            <constraint firstAttribute="trailing" secondItem="wzY-Dj-h3Z" secondAttribute="trailing" id="tnW-yc-knv"/>
-                        </constraints>
-                    </view>
+                    </tableView>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                    <connections>
-                        <outlet property="tableView" destination="wzY-Dj-h3Z" id="nH7-4i-sPh"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="2KW-35-lSf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YPC-aL-e7g" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="168.80000000000001" y="161.46926536731635"/>
+            <point key="canvasLocation" x="692" y="116"/>
         </scene>
     </scenes>
 </document>
