--- a/iOS-MVVMC-Architecture/View/TableViewCell/TweetDetailCell.xib
+++ b/iOS-MVVMC-Architecture/View/TableViewCell/TweetDetailCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="216"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="sbr-c7-Tzh" id="hDD-L3-VjO">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="215.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="216"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="G0l-Q9-d0b">
@@ -54,17 +54,28 @@
                         <attributedString key="attributedText">
                             <fragment>
                                 <string key="content">本文
-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</string>
+</string>
                                 <attributes>
                                     <font key="NSFont" size="17" name=".HiraKakuInterface-W3"/>
                                     <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" lineSpacing="4" paragraphSpacingBefore="4" tighteningFactorForTruncation="0.0"/>
                                 </attributes>
                             </fragment>
+                            <fragment content="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa">
+                                <attributes>
+                                    <font key="NSFont" size="17" name=".HiraKakuInterface-W3"/>
+                                    <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" lineSpacing="4" tighteningFactorForTruncation="0.0"/>
+                                </attributes>
+                            </fragment>
                         </attributedString>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3MZ-P2-gS1">
+                        <rect key="frame" x="8" y="8" width="50" height="50"/>
+                    </button>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="3MZ-P2-gS1" firstAttribute="centerX" secondItem="G0l-Q9-d0b" secondAttribute="centerX" id="2gF-yR-TnX"/>
+                    <constraint firstItem="3MZ-P2-gS1" firstAttribute="centerY" secondItem="G0l-Q9-d0b" secondAttribute="centerY" id="3KS-6p-YKY"/>
                     <constraint firstItem="LWd-4Z-xg8" firstAttribute="centerY" secondItem="G0l-Q9-d0b" secondAttribute="centerY" constant="-10" id="47n-Qe-fD3"/>
                     <constraint firstItem="QRH-9t-VsC" firstAttribute="top" secondItem="G0l-Q9-d0b" secondAttribute="bottom" constant="8" id="8sf-Sf-4Mt"/>
                     <constraint firstItem="x7R-Yl-tzb" firstAttribute="centerY" secondItem="G0l-Q9-d0b" secondAttribute="centerY" constant="10" id="BvV-EO-Hit"/>
@@ -74,8 +85,10 @@ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</string>
                     <constraint firstItem="G0l-Q9-d0b" firstAttribute="leading" secondItem="hDD-L3-VjO" secondAttribute="leading" constant="8" id="Pqj-8K-5Ku"/>
                     <constraint firstItem="DNb-5U-Wr4" firstAttribute="leading" secondItem="hDD-L3-VjO" secondAttribute="leading" constant="8" id="TT5-qp-9ap"/>
                     <constraint firstItem="x7R-Yl-tzb" firstAttribute="leading" secondItem="LWd-4Z-xg8" secondAttribute="leading" id="VEB-ty-DfM"/>
+                    <constraint firstItem="3MZ-P2-gS1" firstAttribute="height" secondItem="G0l-Q9-d0b" secondAttribute="height" id="XqL-lV-IrZ"/>
                     <constraint firstItem="G0l-Q9-d0b" firstAttribute="top" secondItem="hDD-L3-VjO" secondAttribute="top" constant="8" id="YaT-8R-uG5"/>
                     <constraint firstItem="QRH-9t-VsC" firstAttribute="leading" secondItem="hDD-L3-VjO" secondAttribute="leading" constant="8" id="cw6-zn-AzQ"/>
+                    <constraint firstItem="3MZ-P2-gS1" firstAttribute="width" secondItem="G0l-Q9-d0b" secondAttribute="width" id="e3r-Mw-aZ8"/>
                     <constraint firstAttribute="trailing" secondItem="DNb-5U-Wr4" secondAttribute="trailing" constant="8" id="nbP-pY-mZD"/>
                     <constraint firstItem="DNb-5U-Wr4" firstAttribute="top" secondItem="QRH-9t-VsC" secondAttribute="bottom" constant="8" id="zUl-dq-Q5i"/>
                 </constraints>
@@ -83,6 +96,7 @@ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</string>
             <connections>
                 <outlet property="bodyLabel" destination="QRH-9t-VsC" id="XYc-5S-6iw"/>
                 <outlet property="countLabel" destination="DNb-5U-Wr4" id="Kzm-iK-r3z"/>
+                <outlet property="iconButton" destination="3MZ-P2-gS1" id="3tX-Pi-XT9"/>
                 <outlet property="iconImageView" destination="G0l-Q9-d0b" id="GOO-qg-qUH"/>
                 <outlet property="screenNameLabel" destination="x7R-Yl-tzb" id="DDt-X6-EIk"/>
                 <outlet property="userNameLabel" destination="LWd-4Z-xg8" id="cGp-qF-DBu"/>
